Correcting some documentation for t1 and t2

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,5 +9,11 @@ Encoding: UTF-8
 LazyData: true
 Imports:
 	logcondens,
-        pracma 
+        pracma,
+       lattice,
+       gridExtra,
+      ggpubr,
+       grid,
+     ggplot2,
+     ks
 RoxygenNote: 7.1.0
