--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,9 @@
 
 export(SDNN)
 export(calc_mode)
+export(do_description)
 export(hd.lc)
 export(hd.lc.sm)
 export(hd.uni)
+export(plot_b)
+export(umd)
